--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -19,11 +19,11 @@
 
 <body>
   <main>
-    <img src="images/image-qr-code.png" />
+    <img src="images/image-qr-code.png" alt="QRCode to go in this site : https://www.frontendmentor.io"/>
     <section>
-      <h2>
+      <h1>
         Improve your front-end skills by building projects
-      </h2>
+      </h1>
       <p>
         Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
       </p>
